# tinyland-huskycat

./: .bazelrc  .containerignore  .coverage  .gitignore  .gitlab-ci-autodevops.yml  .gitlab-ci.yml  .huskycat.yaml  .mcp.json  .mise.toml  .prettierignore  .prettierrc  .yamllint.yml  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CRUSH.md  ContainerFile  ContainerFile.gpl-sidecar  ContainerFile.wrapper  LICENSE  MODULE.bazel  Makefile  NOTICE  PARALLEL_EXECUTOR_SUMMARY.md  PROGRESS.md  README.md  action.yml  build_binary.py  build_fat_binary.py  coverage.json  entitlements.plist  flake.nix  huskycat.spec  huskycat_main.py  mkdocs.yml  package.json  podman-compose.yml  prompt.txt  pyproject.toml  renovate.json  (+3 more)
.githooks/: README.md  pre-commit  pre-push
.githooks/_/: common.sh
.github/workflows/: ci.yml  huskycat.yml
.gitlab/: schedule-config.yml
.gitlab/ci/: assets.yml  binary-tests.yml  build.yml  ci-base-image.yml  download-tools.yml  e2e-tests.yml  fpm-packages.yml  github-mirror.yml  husky-lint.yml  husky-validation.yml  huskycats-validation.yml  macos-pkg.yml  nix.yml  pages.yml  sbom.yml  scheduled-updates.yml
.huskycat/results/: 20260115_182241_338316_results.json  20260115_182338_217144_results.json  20260115_233239_190669_results.json  20260116_121613_707220_results.json  20260116_121613_746699_results.json  20260116_121613_753041_results.json  20260116_121613_767422_results.json  20260116_121613_788863_results.json  20260116_121613_827766_results.json  20260116_121613_834423_results.json  20260116_121746_349976_results.json  20260116_121746_367013_results.json  20260116_121746_372655_results.json  20260116_121746_381776_results.json  20260116_121746_386901_results.json  20260116_121746_398553_results.json  20260116_121746_403872_results.json  latest.json
.huskycat/runs/: 20260115_182241_338316.json  20260115_182338_217144.json  last_run.json
.huskycat/sprint10/: status.json
.huskycat/tasks/: 02970e70.json  673a9b84.json  6efeeaf5.json  7d5cce56.json  8791e8aa.json  a4f151eb.json  bc948252.json  c8113411.json
assets/icons/: README.md
assets/linux/: huskycat-tray.desktop  huskycat.desktop  org.huskycat.tray.service
assets/macos/: Info-Tray.plist  Info.plist  entitlements.plist
bazel/: nixpkgs.nix
ci-templates/: gitlab-ci-huskycat.yml
claude-hooks/: huskycat-pre-edit.sh
docs/: BETA_TESTING.md  BETA_TESTING_READINESS.md  CONTRIBUTING.md  DOCUMENTATION_AUDIT.md  EMBEDDED_TOOL_EXECUTION.md  QUICK_START_NONBLOCKING.md  RESEARCH_REPORT.md  SECURITY.md  SOURCES.md  SPRINT10_CLEANUP_SUMMARY.md  SPRINT10_TEST_COVERAGE_COMPLETE.md  SPRINT_PLAN.md  architecture-analysis.md  auto-devops-validation.md  binary-downloads.md  binary-packaging-test-results.md  build-system-enhancement-plan.md  cli-reference.md  complete-setup-guide.md  configuration.md  customization.md  dogfooding.md  fat-binary-builds.md  github-actions.md  gitlab-auto-devops-complete.md  gitlab-ci-cd.md  gitlab-ci-validation.md  index.md  install-local.md  install-mcp.md  installation.md  local-installation.md  local-usage.md  macos-code-signing.md  mcp-architecture.md  mcp-authentication-guide.md  mcp-bridge-solution.md  mcp-hooks-integration.md  mcp-research.md  mcp-server-demo-results.md  (+17 more)
docs/api/: mcp-tools.md
docs/architecture/: INTEGRATION_QUICK_REFERENCE.md  INTEGRATION_ROADMAP.md  RESEARCH_SUMMARY.md  ai-assistant-integration-research.md  execution-models.md  fat-binaries.md  product-modes.md  simplified-architecture.md  tui.md
docs/archive/: README.md
docs/ci-cd/: MIGRATION_NOTES.md  gitlab.md
docs/development/: BUILD.md  YAML_LINTER_IMPLEMENTATION.md
docs/examples/: .huskycat.nonblocking.example.yaml
docs/features/: mcp-server.md
docs/infrastructure/: opus-3-wave-plan.md
docs/migration/: to-nonblocking.md
docs/research/: clean-room-reimplementation-feasibility.md  distribution-plan.md
examples/: demo_parallel_executor.py  demo_tui.py  performance_comparison.py  process_manager_demo.py  tui_with_process_manager.py  verify_parallel_executor.py  yaml_lint_demo.py
gpl-sidecar/: README.md  server.py
memory/agents/: README.md
memory/sessions/: README.md
nix/: package.nix
nix/modules/: huskycat.nix
public/: 404.html  index.html  sitemap.xml
public/architecture-analysis/: index.html
public/auto-devops-validation/: index.html
public/binary-packaging-test-results/: index.html
public/claude-integration/: index.html
public/complete-setup-guide/: index.html
reports/: comparative-analysis.md  executive-summary.md  research-synthesis-analysis.md
research/: langgraph-dependency-orchestration.md
scripts/: auto-devops-validation.sh  build-env.sh  build_fat_binary.py  clean-slate.sh  deploy.sh  download-beta.sh  download_tools.py  fpm-postinstall.sh  fpm-preremove.sh  generate-llms-docs.py  generate-release.sh  huskycat-mcp.sh  install-podman.sh  install-unified.sh  install.sh  manage.sh  test-distro.sh  validate-codebase.sh  validate-gitlab-ci-schema.py  verify_binary.sh
site/: 404.html  index.html  sitemap.xml
tests/: README.md  SPRINT10_TEST_REPORT.md  conftest.py  e2e-mcp-server.test.js  playwright.config.py  quality_checklist.md  run_comprehensive_tests.py  run_tests.py  test_binary_bootstrap.py  test_cli_commands.py  test_compose_validation.py  test_config_extended.py  test_container_comprehensive.py  test_dogfooding.py  test_e2e_deployment.py  test_execution_modes.py  test_execution_modes_extended.py  test_git_hooks.py  test_github_actions_validation.py  test_gpl_sidecar.py  test_install_command.py  test_mcp_async_tools.py  test_mcp_history_tools.py  test_mcp_integration_comprehensive.py  test_mcp_server_pbt.py  test_mode_detection.py  test_nonblocking_adapter.py  test_nonblocking_adapter_extended.py  test_parallel_executor.py  test_process_manager.py  test_process_manager_extended.py  test_property_based.py  test_real_validation_e2e.py  test_remote_juggler_integration.py  test_sample.py  test_sprint10_e2e.py  test_sprint10_integration.py  test_sprint10_performance.py  test_sprint10_regression.py  test_strategy.md  (+7 more)
tools/: install.sh
(+338 files in other folders)
