[project]
name = "huskycat"
version = "2.0.0"
description = "Universal Code Validation Platform with MCP Server Integration"
authors = [{name = "Jess Sullivan", email = "jess@tinyland.ai"}]
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = {text = "Apache-2.0"}
keywords = ["linting", "validation", "git-hooks", "mcp", "claude", "ci-cd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.0.0",
    "black>=24.0.0",
    "autoflake>=2.0.0",
    "flake8>=7.0.0",
    "mypy>=1.0.0",
    "PyYAML>=6.0.0",
    "jsonschema>=4.23.0",
    "requests>=2.31.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.18",
    "mkdocs-mermaid2-plugin>=1.2.2",
    "rich>=14.2.0",
    "networkx>=3.2.1",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.0.0",
    "hypothesis>=6.0.0",
    "requests>=2.31.0",
    "docker>=6.0.0",
    "black>=24.0.0",
    "autoflake>=2.0.0",
    "flake8>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.8.0",
    "yamllint>=1.35.0",
    "PyYAML>=6.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-mermaid2-plugin>=1.0.0",
]
build = [
    "pyinstaller>=6.0.0",
]
build-linux = [
    "pyinstaller>=6.0.0",
    "staticx>=0.14.0; sys_platform == 'linux'",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-mermaid2-plugin>=1.0.0",
]
observability = [
    # pytest-otel removed - incompatible with pytest>=8.4.1 in dev deps
    # See: https://github.com/chrisguidry/pytest-otel/issues
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]
dockerlint = [
    # Requires Go compiler to build from source - optional for CI
    # The dockerlint validator gracefully handles missing dependency
    "dockerfile>=3.4.0",
]

[project.scripts]
huskycat = "huskycat.__main__:main"

[project.urls]
Homepage = "https://tinyland.gitlab.io/ai/huskycat/"
Repository = "https://gitlab.com/tinyland/ai/huskycat"
Documentation = "https://tinyland.gitlab.io/ai/huskycat/"
"Bug Tracker" = "https://gitlab.com/tinyland/ai/huskycat/-/issues"
Downloads = "https://tinyland.gitlab.io/ai/huskycat/downloads/"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/huskycat"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "docs/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
    | vendor
    | packages/coreboot
    | packages/qemu
    | \.nx
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Flake8 configuration moved to setup.cfg for better CI compatibility
# This avoids conflicts and ensures consistent configuration

[tool.pylint]
max-line-length = 88
ignore = ["CVS", ".git", "__pycache__", "build", "dist", "node_modules", "vendor"]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
    "W0621",  # redefined-outer-name
]

[tool.mypy]
python_version = "3.9"
# Development-friendly settings - maintain quality while enabling workflow
warn_return_any = false              # Allow Any returns during development
warn_unused_configs = true
disallow_untyped_defs = false         # Allow untyped functions during development
disallow_incomplete_defs = false     # Allow partial type hints
check_untyped_defs = true            # Still check functions that do have types
disallow_untyped_decorators = false  # Allow untyped decorators
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false          # Don't fail on unused # type: ignore
warn_no_return = true
warn_unreachable = true
strict_equality = false              # Less strict for development
# Enable strict mode for production CI via --strict flag
exclude = [
    "node_modules",
    "vendor",
    "packages/coreboot",
    "packages/qemu",
    ".nx",
    "build",
    "dist"
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
# Enable comprehensive rule sets
select = ["E", "F", "I", "N", "W", "UP", "YTT", "ANN", "S", "BLE", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "RUF"]

# Reasonable ignores for this codebase
ignore = [
    "ANN401",   # Dynamically typed expressions (Any) - needed for **kwargs
    "S101",     # Assert usage - needed for tests
    "S607",     # Starting process with partial path - needed for git/uv subprocess calls
    "TID252",   # Relative imports - standard pattern for packages
    "ARG002",   # Unused method argument - needed for interface compliance
    "FBT001",   # Boolean positional arg - common pattern for force/fix flags
    "FBT002",   # Boolean default arg - common pattern
    "COM812",   # Trailing comma - conflicts with formatter sometimes
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "vendor",
    "packages/coreboot",
    "packages/qemu",
    ".nx"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# Comprehensive test file ignores - tests have different requirements than production code
"tests/**/*.py" = [
    "S101",     # Assert usage - required for pytest
    "S103",     # chmod permissive mask - acceptable in tests
    "S108",     # Probable insecure temp file - acceptable in tests
    "S603",     # subprocess call - tests legitimately use subprocess
    "S605",     # os.system shell - acceptable in test fixtures
    "PLR2004",  # Magic values - common in test assertions
    "PLR0913",  # Too many arguments - test parametrization often needs many
    "PLC0415",  # Import not at top - tests often import mid-function
    "PLW2901",  # Loop variable overwritten - acceptable in tests
    "ANN",      # All annotation rules - tests don't need strict typing
    "INP001",   # Implicit namespace package (tests don't need __init__.py)
    "SLF001",   # Private member access - needed for testing internals
    "E501",     # Line too long - some test lines are naturally long
    "E712",     # Equality comparison to False - common in assertions
    "E722",     # Bare except - acceptable for test validation helpers
    "C401",     # Unnecessary generator - not important in tests
    "ERA001",   # Commented out code - common in tests
    "F401",     # Unused imports - test helpers
    "F841",     # Unused variable - test scaffolding
    "PTH",      # pathlib vs os.path - not enforced in tests
    "ARG001",   # Unused function argument - pytest fixtures
    "EXE001",   # Shebang without executable - cosmetic
    "W293",     # Blank line whitespace - minor style issue
    "T201",     # print found - test runners use print for output
    "PT003",    # pytest.fixture implied scope - cosmetic
    "B007",     # Unused loop variable - acceptable in tests
    "BLE001",   # Blind exception - tests often catch general exceptions
    "TRY",      # tryceratops - stylistic try/except patterns
    "SIM",      # simplify - tests may be more explicit
    "RUF",      # ruff-specific - allow test flexibility
    "EM",       # exception messages - tests have inline messages
    "PGH003",   # type ignore specificity - tests use general ignores
]
"test_*.py" = [
    "S101", "S103", "S108", "S603", "S605",  # Security - tests use subprocess/temp files
    "PLR2004", "PLR0913", "PLC0415", "PLW2901",  # Pylint relaxations
    "ANN",      # All annotation rules
    "INP001", "SLF001", "E501", "E712", "E722", "C401", "ERA001", "F401", "F841",
    "PTH", "ARG001", "EXE001", "W293", "T201", "PT003", "B007",
    "BLE001", "TRY", "SIM", "RUF", "EM", "PGH003",
]
"conftest.py" = [
    "S101", "S103", "S108", "S603", "S605",
    "PLR2004", "PLR0913", "PLC0415", "PLW2901",
    "ANN", "INP001", "SLF001", "E501", "E712", "E722", "C401", "ERA001", "F401", "F841",
    "PTH", "ARG001", "EXE001", "W293", "T201", "PT003", "B007",
    "BLE001", "TRY", "SIM", "RUF", "EM", "PGH003",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "hypothesis>=6.138.14",
    "pyinstaller>=6.15.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-html>=4.1.1",
    "pytest-timeout>=2.4.0",
    "types-jsonschema>=4.25.1.20250822",
    "types-pyyaml>=6.0.12.20250822",
    "types-requests>=2.32.4.20250809",
    "yamllint>=1.37.1",
]
